--- a/index.html
+++ b/index.html
@@ -3,57 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <title>Akademnashr</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<header>
+<header class="site-header">
     <a href="index.html">
         <img src="img/logo.svg" alt="Akademnashr logo" width="227" height="60">
     </a>
     <nav>
         <ul>
-            <li>Bosh sahifa</li>
-            <li>Kitoblar</li>
-            <li>Aksiyalar</li>
-            <li>Kontaktlar</li>
+            <li><a href="#" class="sitenav-link">Bosh sahifa</a></li>
+            <li><a href="#" class="sitenav-link">Kitoblar</a></li>
+            <li><a href="#" class="sitenav-link">Aksiyalar</a></li>
+            <li><a href="#" class="sitenav-link">Kontaktlar</a></li>
         </ul>
     </nav>
-    <a href="#">Ro’yxatdan o’tish</a>
+    <a href="#" class="main-link">Ro’yxatdan o’tish</a>
 </header>
 
 <main>
-    <section>
-        <div>
-            <hr>
+    <section class="hero">
+        <div class="hero-content">
+            <hr class="orange-line">
             <h2>Pythonda dasturlash <br>asoslari</h2>
             <p>Dasturlash asoslariga oid o‘zbek tilidagi ilk eng <br>mukammal qo‘llanma. Kitobning har bir bo‘limi
                 <br>uchun maxsus video darslar yozilgan bo‘lib, ularga <br>kitobda ko‘rsatilgan QR kod orqali o‘tish
                 mumkin.
             </p>
-            <a href="#">Buyurtma berish</a>
+            <a href="#" class="main-link">Buyurtma berish</a>
         </div>
 
-        <img src="img/python-book.jpg" alt="Python book" width="510" height="510"
+        <img class="hero-img" src="img/python-book.jpg" alt="Python book" width="510" height="510"
              srcset="img/python-book.jpg 1x, img/python-book@2x.jpg 2x">
     </section>
 
-    <section>
-        <hr>
+    <section class="features">
+        <hr class="orange-line">
         <h2>Nega aynan <br>Akademnashr?</h2>
         <ul>
             <li>
-                <img src="img/cursor-click.svg" alt="" width="56" height="56">
-                <h6>Oson buyurtma qilish</h6>
+                <div class="feature-icon-wrapper">
+                    <img src="img/cursor-click.svg" alt="" width="56" height="56">
+                </div>
+                <h3>Oson buyurtma qilish</h3>
                 <p>Akademnashr.uz saytidan o’zingizga <br>yoqqan kitobni sodda usulda buyurtma <br>qila olasiz.</p>
             </li>
             <li>
-                <img src="img/sparkles.svg" alt="" width="56" height="56">
-                <h6>Eng sara kitoblar</h6>
+                <div class="feature-icon-wrapper">
+                    <img src="img/sparkles.svg" alt="" width="56" height="56">
+                </div>
+                <h3>Eng sara kitoblar</h3>
                 <p>Trenddagi eng ommabop, turli <br>auditoriyalarga mo’ljallangan har xil <br>janrdagi kitoblarni topa
                     olasiz.</p>
             </li>
             <li>
-                <img src="img/lightning-bolt.svg" alt="" width="56" height="56">
-                <h6>Oson buyurtma qilish</h6>
+                <div class="feature-icon-wrapper">
+                    <img src="img/lightning-bolt.svg" alt="" width="56" height="56">
+                </div>
+                <h3>Oson buyurtma qilish</h3>
                 <p>O’zbekistonning ixtiyoriy hududiga <br>3 ish kuni ichida, xalqaro buyurtmalarni 10 ish <br>kuni
                     ichida
                     yetkazib beriladi.</p>
@@ -61,7 +68,7 @@
         </ul>
     </section>
 
-    <section>
+    <section class="promo">
         <div><h3>Bolalar kitoblari uchun <br>ajoyib aksiya!</h3>
             <p>Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish <br>uchun turli mashq qo’llanmalari va
                 komikslar.
@@ -70,6 +77,7 @@
                 (aslida
                 383
                 ming so’m) sotib olishingiz mumkin.</p>
+            <a href="#" class="main-link">Buyurtma berish</a>
         </div>
         <img src="img/sale-img.jpg" alt="Sale image" width="440" height="440"
              srcset="img/sale-img.jpg 1x, img/sale-img@2x.jpg 2x">
@@ -127,14 +135,14 @@
 
     <hr>
     <div>
-        <ul>
+        <ul class="site-footer-links">
             <li><a href="index.html">Bosh sahifa</a></li>
             <li><a href="#">Kitoblar</a></li>
             <li><a href="#">Aksiyalar</a></li>
             <li><a href="#">Yangiliklar</a></li>
             <li><a href="#">Kontaktlar</a></li>
         </ul>
-        <ul>
+        <ul class="site-footer-links">
             <li><a href="#">Ilmiy nashrlar</a></li>
             <li><a href="#">Ilmiy-ommabop nashrlar</a></li>
             <li><a href="#">Ma’rifiy nashrlar</a></li>
@@ -143,12 +151,12 @@
             <li><a href="#">Abituriyentlar uchun</a></li>
             <li><a href="#">Bolalar uchun</a></li>
         </ul>
-        <ul>
+        <ul class="site-footer-links">
             <li><a href="#">Ko’p so’raladigan savollar</a></li>
             <li><a href="#">Yetkazib berish haqida</a></li>
             <li><a href="#">To’lov usullari haqida</a></li>
         </ul>
-        <ul>
+        <ul class="site-footer-links">
             <li><a href="#">Bo’sh ish o’rinlari</a></li>
             <li><a href="#">Biz bilan bog’lanish</a></li>
             <li><a href="#">Maxfiylik nizomi</a></li>
