added flex, align-items, justify-content styles

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Akademnashr</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:wght@400;500;700&display=swap"
+          rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -13,15 +14,17 @@
     <a href="index.html">
         <img src="img/logo.svg" alt="Akademnashr logo" width="227" height="60">
     </a>
-    <nav>
-        <ul>
-            <li><a href="#" class="sitenav-link">Bosh sahifa</a></li>
-            <li><a href="#" class="sitenav-link">Kitoblar</a></li>
-            <li><a href="#" class="sitenav-link">Aksiyalar</a></li>
-            <li><a href="#" class="sitenav-link">Kontaktlar</a></li>
-        </ul>
-    </nav>
-    <a href="#" class="main-link">Ro’yxatdan o’tish</a>
+    <div>
+        <nav>
+            <ul>
+                <li><a href="#" class="sitenav-link">Bosh sahifa</a></li>
+                <li><a href="#" class="sitenav-link">Kitoblar</a></li>
+                <li><a href="#" class="sitenav-link">Aksiyalar</a></li>
+                <li><a href="#" class="sitenav-link">Kontaktlar</a></li>
+            </ul>
+        </nav>
+        <a href="#" class="main-link">Ro’yxatdan o’tish</a>
+    </div>
 </header>
 
 <main>
@@ -88,12 +91,11 @@
 </main>
 
 <footer>
-    <div>
-        <ul>
-            <li><a href="index.html">
+    <div class="site-footer-top">
+            <a href="index.html">
                 <img src="img/logo.svg" alt="akademnashr">
-            </a></li>
-
+            </a>
+        <ul>
             <li><a href="https://t.me/Akademnashr" target="_blank">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M12 0C5.376 0 0 5.376 0 12C0 18.624 5.376 24 12 24C18.624 24 24 18.624 24 12C24 5.376
@@ -108,7 +110,6 @@
                 </svg>
 
             </a></li>
-
             <li><a href="https://m.facebook.com/Akademnashr#_=_" target="_blank">
                 <svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M22.675 0H1.325C.593 0 0 .593 0 1.325v21.351C0 23.407.593 24 1.325
@@ -137,7 +138,7 @@
     </div>
 
     <hr>
-    <div>
+    <div class="site-footer-bottom">
         <ul class="site-footer-links">
             <li><a href="index.html">Bosh sahifa</a></li>
             <li><a href="#">Kitoblar</a></li>
