added hover, active styles

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <header class="site-header">
-    <a href="index.html">
+    <a href="index.html" class="logo-link">
         <img src="img/logo.svg" alt="Akademnashr logo" width="227" height="60">
     </a>
     <div>
@@ -92,10 +92,10 @@
 
 <footer>
     <div class="site-footer-top">
-            <a href="index.html">
+            <a href="index.html" class="logo-link">
                 <img src="img/logo.svg" alt="akademnashr">
             </a>
-        <ul>
+        <ul class="site-footer-socials">
             <li><a href="https://t.me/Akademnashr" target="_blank">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M12 0C5.376 0 0 5.376 0 12C0 18.624 5.376 24 12 24C18.624 24 24 18.624 24 12C24 5.376
@@ -106,7 +106,7 @@
                 8.112 13.788 7.728 13.776C7.296 13.764 6.48 13.536 5.868 13.332C5.112 13.092 4.524 12.96 4.572 12.54C4.596
                 12.324 4.896 12.108 5.46 11.88C8.964 10.356 11.292 9.348 12.456 8.868C15.792 7.476 16.476 7.236 16.932
                 7.236C17.028 7.236 17.256 7.26 17.4 7.38C17.52 7.476 17.556 7.608 17.568 7.704C17.556 7.776 17.58 7.992
-                17.568 8.16Z" fill="#252420"/>
+                17.568 8.16Z" fill="currentColor"/>
                 </svg>
 
             </a></li>
@@ -115,7 +115,7 @@
                     <path d="M22.675 0H1.325C.593 0 0 .593 0 1.325v21.351C0 23.407.593 24 1.325
                 24H12.82v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099
                 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12V24h6.116c.73 0
-                1.323-.593 1.323-1.325V1.325C24 .593 23.407 0 22.675 0Z" fill="#252420"/>
+                1.323-.593 1.323-1.325V1.325C24 .593 23.407 0 22.675 0Z" fill="currentColor"/>
                 </svg>
             </a></li>
             <li><a href="https://instagram.com/akademnashr" target="_blank">
@@ -131,7 +131,7 @@
                       0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069
                       4.849-.069ZM5.838 12a6.162 6.162 0 1 1 12.324 0 6.162 6.162 0 0 1-12.324 0ZM12 16a4 4 0 1 1 0-8
                       4 4 0 0 1 0 8Zm4.965-10.405a1.44 1.44 0 1 1 2.881.001 1.44 1.44 0 0 1-2.881-.001Z"
-                          fill="#252420"/>
+                          fill="currentColor"/>
                 </svg>
             </a></li>
         </ul>
