added margin, display: block styles and normalize.css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:wght@400;500;700&display=swap"
           rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -75,14 +76,11 @@
     </section>
 
     <section class="promo">
-        <div><h3>Bolalar kitoblari uchun <br>ajoyib aksiya!</h3>
-            <p>Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish <br>uchun turli mashq qo’llanmalari va
-                komikslar.
-            </p>
-            <p>Aksiyadagi eng katta to’plamda <strong>50 ta kitob</strong>ni <strong>350 ming</strong> <br>so’mga
-                (aslida
-                383
-                ming so’m) sotib olishingiz mumkin.</p>
+        <div><h2>Bolalar kitoblari uchun <br>ajoyib aksiya!</h2>
+            <div class="promo-text-wrapper"><p>Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish <br>uchun
+                turli mashq qo’llanmalari va komikslar.</p>
+                <p>Aksiyadagi eng katta to’plamda <strong>50 ta kitob</strong>ni <strong>350 ming</strong> <br>so’mga
+                    (aslida 383 ming so’m) sotib olishingiz mumkin.</p></div>
             <a href="#" class="main-link">Buyurtma berish</a>
         </div>
         <img src="img/sale-img.jpg" alt="Sale image" width="440" height="440"
@@ -92,9 +90,9 @@
 
 <footer>
     <div class="site-footer-top">
-            <a href="index.html" class="logo-link">
-                <img src="img/logo.svg" alt="akademnashr">
-            </a>
+        <a href="index.html" class="logo-link">
+            <img src="img/logo.svg" alt="akademnashr">
+        </a>
         <ul class="site-footer-socials">
             <li><a href="https://t.me/Akademnashr" target="_blank">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
