--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <div class="hero-content">
                 <hr class="orange-line">
                 <h2 class="hero-heading">Pythonda dasturlash asoslari</h2>
-                <p class="hero-text">Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma.<br>Kitobning
-                    har bir bo‘limi uchun maxsus video darslar yozilgan bo‘lib, <br>ularga kitobda ko‘rsatilgan QR kod
-                    orqali o‘tish mumkin.</p>
+                <p class="hero-text">Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning
+                    har bir bo‘limi uchun maxsus video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR
+                    kod orqali o‘tish mumkin.</p>
                 <a class="main-link" href="#">Buyurtma berish</a>
             </div>
 
